video needs to be fixed and testimonials in progress

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
     <h1> We are a UI/UX design and development<br>agency in Washington, DC.</h1>
  </div>
 
-
- <iframe class="video-player" width="100%" height="100%" src="https://www.youtube.com/embed/TO-_3tck2tg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  
-
-    <section>
+ <section>
     
         <div class="questions-container">
             <div class="question">
@@ -82,7 +79,31 @@
                 <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
             </div>
   </section>
-            
+
+  <section class="container">
+    <div class="slider-wrapper">
+       <div class="slider">
+        <img id="slide-1" src="https://images.unsplash.com/photo-1417021423914-070979c8eb34?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="mountains covered with snow and birds flying in the sky" />
+        <img id="slide-2" src="https://images.unsplash.com/photo-1417021423914-070979c8eb34?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="mountains covered with snow and birds flying in the sky" />
+        <img id="slide-3" src="https://images.unsplash.com/photo-1417021423914-070979c8eb34?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="mountains covered with snow and birds flying in the sky" />   
+    </div>
+<div class="slider-nav">
+    <a href="#slide-1"></a>
+    <a href="#slide-2"></a>
+    <a href="#slide-3"></a>
+</div>
+    </div>
+  </section>
+
+  <div class="quote-container">
+    <div class="quote-content">
+     "It was great working with Barbara!"
+    </div>
+    <div class="quote-autor">Anthony C.</div>
+
+    <button class="new-quote-btn">Testimonials</button>
+  </div>   
+
  <script>
     hamburger = document.querySelector(".hamburger");
     hamburger.onclick = function() {
