--- a/index.html
+++ b/index.html
@@ -95,14 +95,111 @@
     </div>
   </section>
 
-  <div class="quote-container">
-    <div class="quote-content">
-     "It was great working with Barbara!"
-    </div>
-    <div class="quote-autor">Anthony C.</div>
+ 
+<div class="quote">
+    <h2>
+        As a full-service UX design agency, we
+        work closely with our clients to define,
+        design and develop transformative user
+        experiences across all platforms and
+        brand’s touchpoints.
+        </h2>
+</div>
 
-    <button class="new-quote-btn">Testimonials</button>
-  </div>   
+<section>
+    
+    <div class="questions-container2">
+        <p>FAQ</p>
+        <div class="question">
+            <button>
+                <span>What are you areas of focus? Where can I see your projects?</span>
+                <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
+        </div>
+
+        <div class="question">
+            <button>
+                <span>Do you work with startups? if yes, how my early-stage company afford you?</span>
+                <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
+        </div>
+
+        <div class="question">
+            <button>
+                <span>How can I hire you?</span>
+                <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
+        </div>
+
+        <div class="question">
+            <button>
+                <span>How can I schedule a call?</span>
+                <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
+        </div>
+
+        <div class="question">
+            <button>
+                <span>Can you help with redesign?</span>
+                <i class="fas fa-chevron-down d-arrow"></i>
+            </button>
+            <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
+        </div>
+</section>
+<footer class="footer theme-bg-primary">
+    <div class="container py-5">
+        <div class="row" style="margin-left:50px">
+            <div class="col-lg-3">
+               <h4 class="col-heading">Highlights</h4>
+               <ul>
+                <li><a href="">Our Story</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">contact</a></li>
+               </ul>
+            </div>
+
+            <div class="col-lg-3">
+                <h4 class="col-heading">Resources</h4>
+                <ul>
+                 <li><a href="">Our Story</a></li>
+                 <li><a href="">Pricing</a></li>
+                 <li><a href="">Pricing</a></li>
+                 <li><a href="">contact</a></li>
+                </ul>
+             </div>
+
+             <div class="col-lg-3">
+                <h4 class="col-heading">Legal</h4>
+                <ul>
+                 <li><a href="">Our Story</a></li>
+                 <li><a href="">Pricing</a></li>
+                 <li><a href="">Pricing</a></li>
+                 <li><a href="">contact</a></li>
+                </ul>
+             </div>
+
+             <div class="col-lg-3">
+                <h4 class="col-heading">Stay Connected</h4>
+                <ul class="social-list">
+                    <li class="list-inline-item">
+                 <a href="">
+
+                 </a>
+
+                </li>
+                </ul>
+             </div>
+
+        </div>
+
+    </div>
+
+</footer>
 
  <script>
     hamburger = document.querySelector(".hamburger");
