--- a/index.html
+++ b/index.html
@@ -150,49 +150,27 @@
             <p>Start With An Online Course.An online tutorial is probably the best way to learn JavaScript.If you're serious about learning fast, efficiently and without missing any important information, then you should consider enrolling in an online course.</p>
         </div>
 </section>
-<footer class="footer theme-bg-primary">
-    <div class="container py-5">
-        <div class="row" style="margin-left:50px">
-            <div class="col-lg-3">
-               <h4 class="col-heading">Highlights</h4>
-               <ul>
-                <li><a href="">Our Story</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">contact</a></li>
-               </ul>
-            </div>
+<footer class="footer">
+    <div class="footer-contacts">
+    <span>Let's Talk.</span>
+</div>
+<div class="footer-email">
+    <p><a href="mailto:hege@example.com">hello@example.com</a></p>
+</div>
+    <div class="footer-bottom">
+        <div class="footer-links">
+        <ul>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Github</a></li>
+            <li><a href="">Behance</a></li>
+        </ul>
+    </div>
 
-            <div class="col-lg-3">
-                <h4 class="col-heading">Resources</h4>
-                <ul>
-                 <li><a href="">Our Story</a></li>
-                 <li><a href="">Pricing</a></li>
-                 <li><a href="">Pricing</a></li>
-                 <li><a href="">contact</a></li>
-                </ul>
-             </div>
-
-             <div class="col-lg-3">
-                <h4 class="col-heading">Legal</h4>
-                <ul>
-                 <li><a href="">Our Story</a></li>
-                 <li><a href="">Pricing</a></li>
-                 <li><a href="">Pricing</a></li>
-                 <li><a href="">contact</a></li>
-                </ul>
-             </div>
-
-             <div class="col-lg-3">
-                <h4 class="col-heading">Stay Connected</h4>
-                <ul class="social-list">
-                    <li class="list-inline-item">
-                 <a href="">
-
-                 </a>
-
-                </li>
-                </ul>
+    <div class="footer-address">
+        <span>Washington, dc.</span>
+    </div>
+    </div>
+  </footer> 
              </div>
 
         </div>
